@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-10T00:37:25Z",
+  "timestamp" : "2025-02-12T00:36:10Z",
   "count_outdated" : 1196,
   "uniques_outdated" : 725,
-  "count" : 1234,
-  "uniques" : 756,
+  "count" : 1235,
+  "uniques" : 757,
   "clones" : [
     {
       "timestamp": "2025-01-31T00:00:00Z",
@@ -94,6 +94,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
