@@ -1,5 +1,5 @@
 {
-  "count": 38,
+  "count": 39,
   "uniques": 23,
   "clones": [
     {
@@ -51,6 +51,11 @@
       "timestamp": "2025-02-09T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2025-02-11T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
